Etiquetas del footer
Se definió los enlaces que se verán reflejados en el footer.

--- a/Proyecto-Final/index.html
+++ b/Proyecto-Final/index.html
@@ -111,6 +111,8 @@
 </body>
 
 <footer>
-    
+    <p>YoAhorrador by Natalia Monroy</p>
+    <a href="https://www.youtube.com/@YoAhorradorLatam">Youtube</a>
+    <a href="#contacto">Contáctame</a>
 </footer>
 </html>
