Cambios adicionales en CSS
Cambios en CSS sobre el index y las pestañas adjuntas.

--- a/Proyecto-Final/ahorro.html
+++ b/Proyecto-Final/ahorro.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadoras de ahorro</title>
+    <title>Ahorro</title>
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
+    <h2>Calculadora de Ahorro</h2>
+
     <div class="calculadora">
-        <h2>Calculadora de Ahorro</h2>
+        <div>
+            <h3>Notas:</h3>
+            <p>La calculadora de ahorro que he diseñado es una herramienta en línea que te ayuda a estimar cuánto dinero podrás ahorrar a lo largo del tiempo, basado en tu aporte mensual y la tasa de interés anual esperada. Aquí te dejo una descripción detallada de su funcionamiento y cómo usarla:</p>
+        </div>
+        <div>    
+            <h3>Instrucciones:</h3>   
+            <p>
+                <ol>
+                    <li><b>Cantidad Inicial:</b> Ingresa la cantidad de dinero que tienes actualmente ahorrada.</li>
+                    <li><b>Aporte Mensual:</b>Ingresa el monto que puedes ahorrar cada mes de manera consistente.</li>
+                    <li><b>Tasa de Interés Anual (%):</b> Ingresa la tasa de interés anual en porcentaje que tu banco o institución financiera te ofrece por tus ahorros.</li>
+                    <li><b>Número de Años:</b> Ingresa el número de años que planeas seguir con tus ahorros.</li>
+                </ol>
+
+            </p> 
+        </div>
+
         <div>
             <form id="Ahorros">
                 <fieldset>
@@ -44,23 +62,11 @@
                 </fieldset>
             </form>
         </div>
-        <div>
-            <p id="resultado1">Resultado:</p>
-        </div>
-        <div>
-            <h3>Notas:</h3>
-            <p>La calculadora de ahorro que he diseñado es una herramienta en línea que te ayuda a estimar cuánto dinero podrás ahorrar a lo largo del tiempo, basado en tu aporte mensual y la tasa de interés anual esperada. Aquí te dejo una descripción detallada de su funcionamiento y cómo usarla:</p>
-            <h3>Instrucciones:</h3>   
-            <p>
-                <ol>
-                    <li><b>Cantidad Inicial:</b> Ingresa la cantidad de dinero que tienes actualmente ahorrada.</li>
-                    <li><b>Aporte Mensual:</b>Ingresa el monto que puedes ahorrar cada mes de manera consistente.</li>
-                    <li><b>Tasa de Interés Anual (%):</b> Ingresa la tasa de interés anual en porcentaje que tu banco o institución financiera te ofrece por tus ahorros.</li>
-                    <li><b>Número de Años:</b> Ingresa el número de años que planeas seguir con tus ahorros.</li>
-                </ol>
+        
+    </div>
 
-            </p> 
-        </div>
+    <div>
+        <p id="resultado1"></p>
     </div>
 
     <script src="script.js"></script>
