--- a/Proyecto-Final/index.html
+++ b/Proyecto-Final/index.html
@@ -16,7 +16,9 @@
             <h1>YoAhorrador</h1>
             </div>
             <ul type="none">
-                <li><a href="#contacto" target="_blank"><b>Contáctame</b></a></li>
+                <li><a href="ahorro.html"><b>Ahorro</b></a></li>
+                <li><a href="presupuesto.html"><b>Presupuesto</b></a></li>
+                <li><a href="inversiones.html"><b>Inversiones</b></a></li>
                 <li><a href="https://www.youtube.com/@YoAhorradorLatam" target="_blank"><b>+ info</b></a></li>
             </ul>
         </nav>
@@ -24,12 +26,12 @@
     <main>
         <section class="intro">
             <h2>Calculadoras Financieras</h2>
-            <p>Herramientas online gratuitas relacionadas a finanzas personales e inversión.</p>
+            <p>Herramientas online gratuitas relacionadas a finanzas personales e inversión de fácil uso para principiantes y estudiantes.</p>
         </section>        
         <div class="opciones">
-            <div><a href="ahorro.html" target="_blank">Ahorro</a></div>
-            <div><a href="presupuesto.html" target="_blank">Presupuesto Mensual</a></div>
-            <div><a href="inversiones.html" target="_blank">EVA</a></div>
+            <div><a href="ahorro.html"><b>Ahorro</b></a></div>
+            <div><a href="presupuesto.html"><b>Presupuesto Mensual</b></a></div>
+            <div><a href="inversiones.html"><b>EVA</b></a></div>
         </div>
         <section id="importancia">
             <h2>Importancia:</h2>
@@ -42,7 +44,6 @@
 
 <footer>
     <p>YoAhorrador by Natalia Monroy</p>
-    <a href="https://www.youtube.com/@YoAhorradorLatam">Youtube</a>
-    <a href="#contacto">Contáctame</a>
+    <a href="https://www.youtube.com/@YoAhorradorLatam"><b>Youtube</b></a>
 </footer>
 </html>
