--- a/Proyecto-Final/presupuesto.html
+++ b/Proyecto-Final/presupuesto.html
@@ -7,8 +7,27 @@
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
+    <h2>Calculadora de Presupuesto</h2>
+
     <div class="calculadora">
-        <h2>Calculadora de Presupuesto</h2>
+        <div>
+            <h3>Notas:</h3>
+            <p>Esta calculadora te permite ingresar tus ingresos mensuales y los gastos en diferentes categorías (alquiler, comida, transporte, entretenimiento y otros gastos). Una vez que ingreses toda la información requerida, puedes presionar el botón "Calcular" para ver el saldo neto al final del mes, es decir, cuánto dinero te queda después de restar todos tus gastos de tus ingresos.</p>
+        </div>
+        <div>
+            <h3>Instrucciones:</h3>
+            <p>
+                <ol>
+                    <li><b>Ingresos mensuales:</b> La cantidad total de dinero que recibes al mes.</li>
+                    <li><b>Gasto en alquiler/hipoteca:</b> El monto que pagas mensualmente por tu vivienda.</li>
+                    <li><b>Gasto en comida:</b> Los gastos mensuales en alimentos.</li>
+                    <li><b>Gasto en transporte:</b> Los costos mensuales asociados con el transporte.</li>
+                    <li><b>Gasto en entretenimiento:</b> El dinero gastado en actividades recreativas.</li>
+                    <li><b>Otros gastos:</b> Cualquier otro gasto mensual que tengas.</li>
+                </ol>
+            </p>
+        </div>
+
         <div>
             <form id="presupuesto">
                 <fieldset>
@@ -52,26 +71,13 @@
                     <button type="button" onclick="CalcularPresupuesto()">Calcular</button>
                 </fieldset>
             </form>
-        </div>
-        <div>
-            <p id="resultadoPresupuesto">Resultado:</p>
-        </div>
-        <div>
-            <h3>Notas:</h3>
-            <p>Esta calculadora te permite ingresar tus ingresos mensuales y los gastos en diferentes categorías (alquiler, comida, transporte, entretenimiento y otros gastos). Una vez que ingreses toda la información requerida, puedes presionar el botón "Calcular" para ver el saldo neto al final del mes, es decir, cuánto dinero te queda después de restar todos tus gastos de tus ingresos.</p>
-            <h3>Instrucciones:</h3>
-            <p>
-                <ol>
-                    <li><b>Ingresos mensuales:</b> La cantidad total de dinero que recibes al mes.</li>
-                    <li><b>Gasto en alquiler/hipoteca:</b> El monto que pagas mensualmente por tu vivienda.</li>
-                    <li><b>Gasto en comida:</b> Los gastos mensuales en alimentos.</li>
-                    <li><b>Gasto en transporte:</b> Los costos mensuales asociados con el transporte.</li>
-                    <li><b>Gasto en entretenimiento:</b> El dinero gastado en actividades recreativas.</li>
-                    <li><b>Otros gastos:</b> Cualquier otro gasto mensual que tengas.</li>
-                </ol>
-            </p>
-        </div>
+        </div>  
     </div>
+
+    <div>
+        <p id="resultadoPresupuesto"></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
