Cambios básicos de css y responsividad
Cambios en todos los archivos html, responsividad y estilos css.

--- a/Proyecto-Final/ahorro.html
+++ b/Proyecto-Final/ahorro.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html"><img src="imagen1.png" alt="Logo de YoAhorrador"></a>
+        </nav>
+    </header>
+
+    <main>
     <h2>Calculadora de Ahorro</h2>
 
     <div class="calculadora">
@@ -68,7 +75,7 @@
     <div>
         <p id="resultado1"></p>
     </div>
-
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
