--- a/Proyecto-Final/inversiones.html
+++ b/Proyecto-Final/inversiones.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html"><img src="imagen1.png" alt="Logo de YoAhorrador"></a>
+            <a href="#eva"><b>EVA</b></a>
+            <a href="#roiCalculator"><b>ROI</b></a>
+        </nav>
+    </header>
 
     <h2>Calculadora EVA</h2>
     <div class="calculadora">
