--- a/Proyecto-Final/presupuesto.html
+++ b/Proyecto-Final/presupuesto.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="web.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="index.html"><img src="imagen1.png" alt="Logo de YoAhorrador"></a>
+        </nav>
+    </header>
+    
     <h2>Calculadora de Presupuesto</h2>
 
     <div class="calculadora">
