--- a/Proyecto-Final/index.html
+++ b/Proyecto-Final/index.html
@@ -7,6 +7,7 @@
     <meta name="contenido" content="Calculadoras para inversores">
     <title>Calculadoras para administradores</title>
     <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="hover-min.css">
 </head>
 <body>
     <header>
@@ -29,9 +30,9 @@
             <p>Herramientas online gratuitas relacionadas a finanzas personales e inversión de fácil uso para principiantes y estudiantes.</p>
         </section>        
         <div class="opciones">
-            <div><a href="ahorro.html"><b>Ahorro</b></a></div>
-            <div><a href="presupuesto.html"><b>Presupuesto Mensual</b></a></div>
-            <div><a href="inversiones.html"><b>EVA</b></a></div>
+            <div><a href="ahorro.html" class="hvr-buzz-out"><b>Ahorro</b></a></div>
+            <div><a href="presupuesto.html" class="hvr-buzz-out"><b>Presupuesto Mensual</b></a></div>
+            <div><a href="inversiones.html" class="hvr-buzz-out"><b>EVA</b></a></div>
         </div>
         <section id="importancia">
             <h2>Importancia:</h2>
